aws-rpc-system/aws-rpc-system/network.tf
resource "aws_vpc" "rpc_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "rpc-vpc"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.rpc_vpc.id
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.rpc_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet"
  }
}

resource "aws_subnet" "private" {
  vpc_id     = aws_vpc.rpc_vpc.id
  cidr_block = "10.0.2.0/24"

  tags = {
    Name = "private-subnet"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.rpc_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

#NAT Elastic IP

resource "aws_eip" "nat_eip" {
  domain = "vpc"
}


#NAT Gateway
resource "aws_nat_gateway" "nat" {

  allocation_id = aws_eip.nat_eip.id

  subnet_id = aws_subnet.public.id

  depends_on = [
    aws_internet_gateway.igw
  ]

  tags = {
    Name = "rpc-nat"
  }
}

#Private Route Table 

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.rpc_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "private-rt"
  }
}

# Associate Private Subnet

resource "aws_route_table_association" "private" {

  subnet_id      = aws_subnet.private.id

  route_table_id = aws_route_table.private.id
}
